# plex-webos

./: .gitignore  CMakeLists.txt  README.md  toolchain-webos.cmake
.github/workflows/: build.yml
docker/: Dockerfile  build-image.sh
scripts/: build.sh  deploy.sh  package.sh
src/: app.cpp  app.h  main.cpp
src/input/: remote.cpp  remote.h
src/media/: player.cpp  player.h
src/plex/: auth.cpp  auth.h  client.cpp  client.h  models.h
src/ui/: detail_screen.cpp  grid_screen.cpp  home_screen.cpp  image_cache.cpp  image_cache.h  login_screen.cpp  playing_screen.cpp  renderer.cpp  renderer.h  text.cpp  text.h
webos/: appinfo.json
